--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Grannar"
         tools:targetApi="31">
-
+        <activity
+            android:name=".ui.activities.CalendarActivity"
+            android:exported="true" />
         <activity
             android:name=".ui.activities.MainActivity"
             android:exported="true">
@@ -22,8 +24,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".ui.activities.HomeActivity" android:exported="true"/>
+        <activity
+            android:name=".ui.activities.HomeActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
