--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Grannar"
         tools:targetApi="31">
         <activity
+            android:name=".ui.fragment.FragmentHomeChatt"
+            android:exported="false" />
+        <activity
             android:name=".ui.activities.CalendarActivity"
             android:exported="true" />
         <activity
