--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Grannar"
         tools:targetApi="31">
+        <activity android:name=".ui.activities.GroupActivity"
+            android:exported="true"/>
         <activity
             android:name=".ui.fragment.FragmentHomeChatt"
-            android:exported="false" />
+            android:exported="false"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".ui.activities.CalendarActivity"
             android:exported="true" />
